<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/pfa_footer_layout_root"
	android:orientation="horizontal">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="buttonClickHandler"
        android:text="@string/clear" />

    <Button
        android:id="@+id/preferencesButton"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="buttonClickHandler"
        android:text="@string/preferences" />

	<Button android:layout_weight="1" 
		android:layout_width="0dip"
		android:layout_height="wrap_content" android:id="@+id/calculateButton"
		android:text="@string/calculate" android:onClick="buttonClickHandler"></Button>
</LinearLayout>
