<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="Tested Components">
                <CheckBoxPreference
                        android:title="@string/waist_measurement"
                        android:defaultValue="true"
                        android:key="waistPref" />
                <CheckBoxPreference
                        android:title="@string/pushups"
                        android:defaultValue="true"
                        android:key="pushupPref" />
                <CheckBoxPreference
                        android:title="@string/situps"
                        android:defaultValue="true"
                        android:key="situpPref" />
                <CheckBoxPreference
                        android:title="@string/aerobic_fitness"
                        android:defaultValue="true"
                        android:key="runPref" />
                <ListPreference
                	android:title="Aerobic Test"
                	android:summary="1.5 Mile Run or 2.0 Km Walk"
                	android:dependency="runPref"
                	android:key="aerobicCompPref"
                	android:defaultValue="1"
                	android:entries="@array/aerobic_component"
                	android:entryValues="@array/aerobic_component_values" />
                <ListPreference android:key="altitudePref" android:title="Altitude Correction" android:defaultValue="0" android:entries="@array/altitude_adjustment" android:entryValues="@array/altitude_adjustment_values" android:dependency="runPref"/>
        </PreferenceCategory>
 </PreferenceScreen>