<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/afi_dialog_layout_root">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical">

		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:stretchColumns="0,2" android:id="@+id/afi_run_table">
			<TableRow android:layout_height="wrap_content"
				android:layout_width="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:gravity="center"
					android:text="@string/aerobic_fitness"></TextView>
			</TableRow>
		</TableLayout>

		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:stretchColumns="0,2" android:id="@+id/afi_waist_table">
			<TableRow android:layout_height="wrap_content"
				android:layout_width="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:gravity="center"
					android:text="@string/waist_measurement"></TextView>
			</TableRow>
		</TableLayout>
		<TableLayout android:stretchColumns="0,2"
			android:id="@+id/afi_pushup_table" android:layout_height="fill_parent"
			android:layout_width="fill_parent">
			<TableRow android:layout_height="wrap_content"
				android:layout_width="wrap_content">
				<TextView android:text="@string/pushups"
					android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:gravity="center"></TextView>
			</TableRow>
		</TableLayout>
		<TableLayout android:layout_height="fill_parent"
			android:stretchColumns="0,2" android:id="@+id/afi_situp_table"
			android:layout_width="fill_parent">
			<TableRow android:layout_height="wrap_content"
				android:layout_width="wrap_content">
				<TextView android:text="@string/situps"
					android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:gravity="center"></TextView>
			</TableRow>
		</TableLayout>

	</LinearLayout>
</ScrollView>